# blankhs

./: .gitignore  LICENSE  README.md  blankhs.cabal
src/BlankHS/: Blank.hs
test/: Main.hs
