name:                blankhs
version:             0.1.0.0
synopsis:            TODO
description:         TODO
homepage:            TODO
license:             BSD3
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           2016 Eric Conlon
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:
    BlankHS.Blank
  default-language:  Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    turtle >= 1.2 && < 2,
    foldl >= 1.1 && < 2,
    text >= 1.2 && < 2,
    containers >= 0.5 && < 1,
    bytestring >= 0.10 && < 1,
    heredoc >= 0.2 && < 1

test-suite test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    blankhs,
    HUnit >= 1.2 && < 2,
    turtle >= 1.2 && < 2
